--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,7 +90,8 @@ h6 {
 }
 
 .four-features {
-    background-color: #558B2F;
+    margin-top: 40px;
+    background-color: #689F38;
     border-radius: 8px;
     /*	margin: 30px 35px;*/
 }
@@ -1094,8 +1095,10 @@ textarea#message {
 }
 
 .img-fit {
+    object-fit: cover;
     display: block;
     min-width: 100%;
+    height: 300px;
 }
 
 .img-fit,
